<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:dreamDroid="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/menu_home_media"
        android:enabled="false"
        android:icon="@drawable/ic_menu_home"
        android:title="@string/home_media"
        dreamDroid:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_navigation_back_media"
        android:enabled="false"
        android:icon="@drawable/ic_menu_navigation_back"
        android:title="@string/navigation_back_media"
        dreamDroid:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_close_media"
        android:icon="@drawable/ic_menu_close_clear_cancel"
        android:title="@string/close_media"
        dreamDroid:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_playlist"
        android:icon="@drawable/ic_menu_list"
        android:title="@string/playlist"
        dreamDroid:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_filebrowser"
        android:icon="@drawable/ic_menu_locations"
        android:title="@string/filebrowser"
        dreamDroid:showAsAction="ifRoom"/>

</menu>