<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            style="@style/SimpleHeader"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile" />

        <EditText
            android:id="@+id/EditTextProfile"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/profile"
            android:singleLine="true" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                style="@style/SimpleHeader"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="80dp"
                android:text="@string/host" />

            <TextView
                style="@style/SimpleHeader"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-80dp"
                android:text="@string/port" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/EditTextHost"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="80dp"
                android:hint="@string/host_long"
                android:singleLine="true" />

            <EditText
                android:id="@+id/EditTextPort"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-80dp"
                android:hint="@string/port"
                android:inputType="number"
                android:maxLength="5"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="50dip"
                android:paddingLeft="3dip"
                android:text="@string/ssl_enabled"
                android:textAppearance="@android:style/TextAppearance.Medium" />

            <CheckBox
                android:id="@+id/CheckBoxSsl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-45dip" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayoutIsLogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="50dip"
                android:paddingLeft="3dip"
                android:text="@string/login_enabled"
                android:textAppearance="@android:style/TextAppearance.Medium" />

            <CheckBox
                android:id="@+id/CheckBoxLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-45dip" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayoutLogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                style="@style/SimpleHeader"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/user" />

            <EditText
                android:id="@+id/EditTextUser"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_long"
                android:singleLine="true" />

            <TextView
                style="@style/SimpleHeader"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/pass" />

            <EditText
                android:id="@+id/EditTextPass"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pass_long"
                android:inputType="textPassword"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="?attr/simpleHeaderBackground"
            android:orientation="vertical"
            android:paddingRight="5dp" >

            <TextView
                style="@style/SimpleHeader"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/stream" />

            <EditText
                android:id="@+id/EditTextStreamHost"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:ems="10"
                android:hint="@string/stream_host_long"
                android:singleLine="true" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:orientation="horizontal" >

                <TextView
                    style="@style/SimpleHeader"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="160dp"
                    android:text="@string/port_stream_live" />

                <EditText
                    android:id="@+id/EditTextStreamPort"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="-160dp"
                    android:ems="10"
                    android:gravity="right|center_vertical"
                    android:hint="@string/port_stream_live"
                    android:inputType="number"
                    android:maxLength="5"
                    android:singleLine="true" >

                    <requestFocus />
                </EditText>
            </LinearLayout>

            <CheckBox
                android:id="@+id/CheckBoxLoginStream"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/login_live" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:orientation="horizontal" >

                <TextView
                    style="@style/SimpleHeader"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="160dp"
                    android:text="@string/port_stream_file" />

                <EditText
                    android:id="@+id/EditTextFilePort"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="-160dp"
                    android:gravity="right|center_vertical"
                    android:hint="@string/port_stream_file"
                    android:inputType="number"
                    android:maxLength="5"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <CheckBox
                    android:id="@+id/CheckBoxSslFileStream"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/ssl_movies" />

                <CheckBox
                    android:id="@+id/CheckBoxLoginFileStream"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/login_movies" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayoutIsSimpleRemote"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="50dip"
                android:paddingLeft="3dip"
                android:text="@string/simple_remote"
                android:textAppearance="@android:style/TextAppearance.Medium" />

            <CheckBox
                android:id="@+id/CheckBoxSimpleRemote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-45dip" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>