<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:minWidth="150dip"
    android:orientation="vertical" >

    <View
        android:id="@+id/divider"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="3dp"
        android:background="@android:drawable/divider_horizontal_bright" />

    <com.michaelnovakjr.numberpicker.NumberPicker
        android:id="@+id/NumberPicker"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <CheckBox
        android:id="@+id/CheckBoxEnabled"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/activate" />

    <RadioGroup
        android:id="@+id/RadioGroupAction"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RadioButton
            android:id="@+id/RadioButtonStandby"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/standby" />

        <RadioButton
            android:id="@+id/RadioButtonShutdown"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/shutdown" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/ButtonSave"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_btn_save"
            android:text="@string/save" />

        <Button
            android:id="@+id/ButtonClose"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_btn_close"
            android:text="@string/close" />
    </LinearLayout>

</LinearLayout>